--- a/src/main/resources/templates/layout/admin/updateEpisode.html
+++ b/src/main/resources/templates/layout/admin/updateEpisode.html
@@ -26,7 +26,7 @@
 								<h5>수정해주시고 수정하기 버튼을 눌러주세요.</h5>
 							</div>
 
-						<form th:action="@{/updateEpisode}" method="post" id="update" enctype="multipart/form-data">
+						<form th:action="@{/updateEpisode}" method="post" id="update" enctype="multipart/form-data" onsubmit="return episode_save()">
 							
 							<div class="input-table">
 							
