--- a/src/main/resources/templates/fragments/adminmid.html
+++ b/src/main/resources/templates/fragments/adminmid.html
@@ -56,19 +56,13 @@
                                 <nav class="sb-sidenav-menu-nested nav">
                                		<a class="nav-link" th:href="@{/boardList}">게시판 관리</a>
                                		<a class="nav-link" th:href="@{/qnaBoardList}">Q&A 답변</a>
-                                    <a class="nav-link" th:href="@{/#}">자주하는 질문</a>
-                                   
-                                    <a class="nav-link" th:href="@{/#}"></a>
+                                    <a class="nav-link" th:href="@{/#}">자주하는 질문</a>                 
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading">Addons</div>
-                            <a class="nav-link" href="charts.html">
+                              <div class="sb-sidenav-menu-heading">Member</div>
+                            <a class="nav-link" th:href="@{/getMemberList}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Charts
-                            </a>
-                            <a class="nav-link" href="tables.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                                Tables
+                               회원관리
                             </a>
                         </div>
                     </div>
