--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html >
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <th:block th:fragment="header">
- <head>
+	<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link
+	href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+	rel="stylesheet">
 
-    <title>YongYongPlay</title>
+<title>YongYongPlay</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap core CSS -->
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+<!-- Additional CSS Files -->
+<link rel="stylesheet" href="assets/css/fontawesome.css">
+<link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css">
+<link rel="stylesheet" href="assets/css/owl.css">
+<link rel="stylesheet" href="assets/css/animate.css">
+<link rel="stylesheet"
+	href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 <!--
 
 TemplateMo 579 Cyborg Gaming
@@ -27,59 +32,68 @@ TemplateMo 579 Cyborg Gaming
 https://templatemo.com/tm-579-cyborg-gaming
 
 -->
-  </head>
+	</head>
 
-<body>
-<!-- Google 로그인 API 스크립트 추가 -->
-<script src="https://apis.google.com/js/platform.js?apikey=AIzaSyABZcGiylkxAV0j0A3eqw-nrEbv2d8A7eg" async
-	defer></script>
-<!-- 네이버 로그인 API 스크립트 추가 -->
-<script type="text/javascript" src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js"
-	charset="UTF-8"></script>
-<!-- 카카오톡 로그인 API 스크립트 추가 -->
-<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-	
-<!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-				
-				<div>
-					<ul class="upper-nav" th:if="${session.member == null}">
-						<li><a href="login">로그인</a></li>
-						<li ><a href="change">이용권안내</a></li>
-					</ul>
-					<ul class="upper-nav" th:unless="${session.member == null}">
-						<li th:if="${session.member.position == 'ADMIN'}"><a href="adminPage">관리자 페이지 이동</a></li>
-						<li><a href="logout">로그아웃</a></li>
-						<li th:unless="${session.member.position == 'ADMIN'}"><a href="change">이용권변경</a></li>
-					</ul>
-					<hr>
-				</div>
-				
-                <nav class="main-nav">
-					
-	                    <!-- ***** Logo Start ***** -->
-	                    <a href="main" class="logo">
-	                        <img src="assets/images/logo.png" alt="">
-	                    </a>
-	                    <!-- ***** Logo End ***** -->
-	                    
-	                    <!-- ***** Menu Start ***** -->
-	                    <ul class="nav">
-	                        <li><a href="main" class="active">Home</a></li>
-	                        <li><a href="allmovie">영화</a></li>
-	                        <li><a href="tvprogram">TV프로그램</a></li>
-	                        <li><a href="community">커뮤니티</a></li>
-	                        <li><a href="mypage">마이 페이지<img src="assets/images/avatar-01.jpg" alt=""></a></li>
-	                    </ul>
-	                    <a class='menu-trigger'>
-	                        <span>Menu</span>
-	                    </a>
-	                    <!-- ***** Menu End ***** -->
-	                    <!-- ***** Search Start ***** -->
-	                    <div class="search-input">
+	<body>
+		<!-- Google 로그인 API 스크립트 추가 -->
+		<script
+			src="https://apis.google.com/js/platform.js?apikey=AIzaSyABZcGiylkxAV0j0A3eqw-nrEbv2d8A7eg"
+			async defer></script>
+		<!-- 네이버 로그인 API 스크립트 추가 -->
+		<script type="text/javascript"
+			src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.0.js"
+			charset="UTF-8"></script>
+		<!-- 카카오톡 로그인 API 스크립트 추가 -->
+		<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+
+		<!-- ***** Header Area Start ***** -->
+		<header class="header-area header-sticky">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<div>
+						
+							<!-- 메뉴 -->
+							<ul class="upper-nav"  sec:authorize="isAnonymous()">
+								<li><a href="login">로그인</a></li>
+								<li><a href="change">이용권안내</a></li>
+							</ul>
+							<!-- 사용자 인증 상태에 따른 메뉴 -->
+							
+							<ul class="upper-nav" sec:authorize="isAuthenticated()">
+								<li sec:authorize="hasRole('ADMIN')"><a
+									href="adminPage">관리자 페이지 이동</a></li>
+								<li><a href="logout">로그아웃</a></li>
+								<li  sec:authorize="not hasRole('ADMIN')"><a
+									href="change">이용권변경</a></li>
+							</ul>
+							<hr>
+						</div>
+
+
+
+						<nav class="main-nav">
+
+							<!-- ***** Logo Start ***** -->
+							<a href="main" class="logo"> <img
+								src="assets/images/logo.png" alt="">
+							</a>
+							<!-- ***** Logo End ***** -->
+
+							<!-- ***** Menu Start ***** -->
+							<ul class="nav">
+								<li><a href="main" class="active">Home</a></li>
+								<li><a href="allmovie">영화</a></li>
+								<li><a href="tvprogram">TV프로그램</a></li>
+								<li><a href="community">커뮤니티</a></li>
+								<li><a href="mypage">마이 페이지<img
+										src="assets/images/avatar-01.jpg" alt=""></a></li>
+							</ul>
+							<a class='menu-trigger'> <span>Menu</span>
+							</a>
+							<!-- ***** Menu End ***** -->
+							<!-- ***** Search Start ***** -->
+							<div class="search-input">
 								<form id="search" th:action="@{/search}">
 									<input type="text" placeholder="Search" id='searchText'
 										name="searchKeyword" onkeypress="handle" /> <i
@@ -87,28 +101,26 @@ https://templatemo.com/tm-579-cyborg-gaming
 								</form>
 
 							</div>
-	                    <!-- ***** Search End ***** -->
-                </nav>
-                
-            </div>
-        </div>
-    </div>
-  </header>
-  <!-- ***** Header Area End ***** -->
-  
-    <!-- ***** Preloader Start ***** -->
-  <div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-      <span class="dot"></span>
-      <div class="dots">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </div>
-  <!-- ***** Preloader End ***** -->
+							<!-- ***** Search End ***** -->
+						</nav>
 
-</body>
+					</div>
+				</div>
+			</div>
+		</header>
+		<!-- ***** Header Area End ***** -->
+
+		<!-- ***** Preloader Start ***** -->
+		<div id="js-preloader" class="js-preloader">
+			<div class="preloader-inner">
+				<span class="dot"></span>
+				<div class="dots">
+					<span></span> <span></span> <span></span>
+				</div>
+			</div>
+		</div>
+		<!-- ***** Preloader End ***** -->
+
+	</body>
 </th:block>
 </html>
