--- a/src/main/resources/templates/layout/member/find_id.html
+++ b/src/main/resources/templates/layout/member/find_id.html
@@ -6,21 +6,8 @@
 
 <head>
 <meta charset="UTF-8">
+
 <title>아이디 찾기</title>
-<script type="text/javascript">
-	// 아이디 찾기
-	function check_find_id() {
-		// 이름랑 이메일
-		var phone_numberValue = document.getElementById("phone_number").value;
-		var emailValue = document.getElementById("email").value;
-		// 이메일과 아이디를 모두 확인하려면 URL에 두 값을 추가
-		var url = "check_find_id?phone_number=" + phone_numberValue + "&email="
-				+ emailValue;
-		console.log(url); // 확인을 위한 로그
-		// 새 창으로 열기
-		window.open(url, "_blank", "width=400,height=300");
-	}
-</script>
 </head>
 <body>
 	<div class="container">
@@ -37,24 +24,24 @@
 								</div>
 								<div class="form-section">
 
-									<form th:action="@{/find_id}" method="post" name="fr">
+								<form th:action="@{/check_find_id}" method="post" name="fr">
 										<div class="input_block">
 											<h5>이메일</h5>
 											<input type="email" name="email" id="email">
 										</div>
 										<div class="input_block">
 											<h5>핸드폰 번호</h5>
-											<input type="text" name="phone_number" id="phone_number">
+											<input type="text" name="phone_number" id="phone_number" placeholder="'-' 제외 11자리 입력">
+											<span id="phone-message"> </span>
 										</div>
-										<input  class="signin_btn" type="button" value="아이디 찾기" onclick="check_find_id()"><br>
-
-										<div class="input_block">
-											<h5>찾은 아이디</h5>
-											<input type="text" name="id" id="id" readonly>
-										</div>										
+										<input class="signin_btn" type="button" value="아이디 찾기" onclick="check_find_id()"><br>
+										<div  th:align="center">
+										<span id="searchid-message"></span><br>
+										</div> 								
 									</form>
 									<a th:href="@{/login}">로그인</a> &nbsp; &nbsp; 
 										<a th:href="@{/find_pwd}">비밀번호 찾기</a>
+									</div>					
 								</div>
 							</div>
 						</div>
