--- a/src/main/resources/templates/layout/member/modify.html
+++ b/src/main/resources/templates/layout/member/modify.html
@@ -31,7 +31,7 @@
                               </div>
                                <div class="input_block">
                                  <h5>비밀번호</h5>
-                                 <input type="password" name="password" id="password" th:value="${member.password}">
+                                 <input type="password" name="password" id="password">
                               </div>
                               <div class="input_block">
                                  <h5 style="color: #ec6090;">이름</h5>
