--- a/src/main/resources/templates/fragments/adminheader.html
+++ b/src/main/resources/templates/fragments/adminheader.html
@@ -38,7 +38,8 @@
                         <li class="dropdown-item">안녕하세요</li>
                         <li class="dropdown-item">관리자님</li>
                         <li><hr class="dropdown-divider" /></li>
-                       <li><a class="dropdown-item" th:href="@{/logout}">로그아웃</a></li>
+                     	<li class="dropdown-item"><a th:href="@{/logout}"
+									onclick="event.preventDefault(); document.getElementById('logout-form').submit();">로그아웃</a></li>
                     </ul>
                 </li>
             </ul>
