--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-579-cyborg-gaming
 
 							<ul class="upper-nav" sec:authorize="isAuthenticated()">
 								<li sec:authorize="principal.member.position == 'ADMIN'"><a
-									href="adminPage">관리자 페이지 이동</a></li>
+									href="admin/adminPage">관리자 페이지 이동</a></li>
 								<li><a th:href="@{/logout}"
 									onclick="event.preventDefault(); document.getElementById('logout-form').submit();">로그아웃</a></li>
 								<li sec:authorize="principal.member.position != 'ADMIN'"><a
