--- a/src/main/resources/templates/layout/admin/getMovie.html
+++ b/src/main/resources/templates/layout/admin/getMovie.html
@@ -58,8 +58,8 @@
 						</table>
 					</div>
 					<br>
-					<a th:href="@{'/updateMovie?movie_code=' + ${movie.movie_code}}">수정하기</a>
-					<a th:href="@{/deleteMovie/{movie_code}(movie_code=${movie.movie_code})}">삭제하기</a>
+					<a th:href="@{'/admin/updateMovie?movie_code=' + ${movie.movie_code}}">수정하기</a>
+					<a th:href="@{/admin/deleteMovie/{movie_code}(movie_code=${movie.movie_code})}">삭제하기</a>
 
 
 				</div>
