--- a/src/main/resources/templates/layout/admin/updateMovie.html
+++ b/src/main/resources/templates/layout/admin/updateMovie.html
@@ -4,7 +4,7 @@
 <!-- header 입니다. -->
 <th:block th:replace="fragments/adminheader :: adminheader"></th:block>
 <!-- CSS Files -->
-<link rel="stylesheet" href="assets/css/admin.css" />
+<link rel="stylesheet" th:href="@{/assets/css/admin.css}" />
 <!-- js Files -->
 <script type="text/javascript" th:src="@{/assets/js/admin.js}"></script>
 </head>
@@ -26,7 +26,7 @@
 								<h4>영화 수정 페이지 입니다.</h4>
 								<h5>수정해주시고 수정하기 버튼을 눌러주세요.</h5>
 							</div>
-							<form th:action="@{/updateMovie}" method="post" id="update" enctype="multipart/form-data" onsubmit="return movie_save()">
+							<form th:action="@{/admin/updateMovie}" method="post" id="update" enctype="multipart/form-data" onsubmit="return movie_save()">
 								<div class="input-table">
 									<div class="insert-input">
 										<h5>카테고리</h5>
