--- a/src/main/resources/templates/layout/admin/insertEpisode.html
+++ b/src/main/resources/templates/layout/admin/insertEpisode.html
@@ -27,7 +27,7 @@
 								<h4>티비 프로그램 에피소드 등록 페이지 입니다.</h4>
 								<h5>모두 입력하세요.</h5>
 							</div>
-							<form th:action="@{/insertEpisode}" method="post" id="insert" enctype="multipart/form-data" onsubmit="return episode_save()">
+							<form th:action="@{/admin/insertEpisode}" method="post" id="insert" enctype="multipart/form-data" onsubmit="return episode_save()">
 								<div class="input-table">
 								
 								<div class="insert-input">
